core/include/zlink.h

typedef unsigned __int64 uint64_t;
typedef unsigned __int32 uint32_t;
typedef unsigned __int8 uint8_t;
typedef struct zlink_msg_t
{
#if defined(_MSC_VER) && (defined(_M_X64) || defined(_M_ARM64))
    __declspec(align (8)) unsigned char _[64];
#elif defined(_MSC_VER)                                                        \
  && (defined(_M_IX86) || defined(_M_ARM_ARMV7VE) || defined(_M_ARM))
    __declspec(align (4)) unsigned char _[64];
#elif defined(__GNUC__) || defined(__INTEL_COMPILER)                           \
  || (defined(__SUNPRO_C) && __SUNPRO_C >= 0x590)                              \
  || (defined(__SUNPRO_CC) && __SUNPRO_CC >= 0x590)
    unsigned char _[64] __attribute__ ((aligned (sizeof (void *))));
#else
    unsigned char _[64];
#endif
} zlink_msg_t;
typedef struct zlink_routing_id_t
{
    uint8_t size;
    uint8_t data[255];
} zlink_routing_id_t;
typedef void (zlink_free_fn) (void *data_, void *hint_);
typedef void (*zlink_reply_handler_fn) (
  zlink_request_result_t result_,
  zlink_msg_t *parts_,
  size_t part_count_,
  void *userdata_);
typedef void (*zlink_router_handler_fn) (
  const zlink_routing_id_t *source_node_rid_,
  const zlink_routing_id_t *source_spot_rid_,
  uint64_t request_seq_,
  zlink_msg_t *parts_,
  size_t part_count_,
  void *userdata_);
ZLINK_EXPORT zlink_config_result_t zlink_set_option (void *handle_,
                                    zlink_option_t option_,
                                    const void *optval_,
                                    size_t optvallen_);
ZLINK_EXPORT zlink_config_result_t zlink_get_option (void *handle_,
                                    zlink_option_t option_,
                                    void *optval_,
                                    size_t *optvallen_);
ZLINK_EXPORT zlink_config_result_t zlink_set_routing_id (void *handle_,
                                        const void *data_,
                                        size_t size_);
ZLINK_EXPORT zlink_config_result_t zlink_get_routing_id (void *handle_,
                                        zlink_routing_id_t *out_);
ZLINK_EXPORT zlink_config_result_t zlink_set_tls_server (void *handle_,
                                        const char *cert_,
                                        const char *key_,
                                        int require_client_cert_);
ZLINK_EXPORT zlink_config_result_t zlink_set_tls_client (void *handle_,
                                        const char *ca_cert_,
                                        const char *hostname_,
                                        int trust_system_);
ZLINK_EXPORT zlink_config_result_t zlink_set_router_option (
  void *handle_,
  zlink_router_option_t option_,
  const void *optval_,
  size_t optvallen_);
ZLINK_EXPORT zlink_config_result_t zlink_get_router_option (
  void *handle_,
  zlink_router_option_t option_,
  void *optval_,
  size_t *optvallen_);
ZLINK_EXPORT zlink_config_result_t zlink_set_dealer_option (
  void *handle_,
  zlink_dealer_option_t option_,
  const void *optval_,
  size_t optvallen_);
ZLINK_EXPORT zlink_config_result_t zlink_set_stream_option (
  void *handle_,
  zlink_stream_option_t option_,
  const void *optval_,
  size_t optvallen_);
ZLINK_EXPORT zlink_config_result_t zlink_get_stream_option (
  void *handle_,
  zlink_stream_option_t option_,
  void *optval_,
  size_t *optvallen_);
ZLINK_EXPORT zlink_config_result_t zlink_set_pub_option (void *handle_,
                                        zlink_pub_option_t option_,
                                        const void *optval_,
                                        size_t optvallen_);
ZLINK_EXPORT zlink_config_result_t zlink_get_pub_option (void *handle_,
                                        zlink_pub_option_t option_,
                                        void *optval_,
                                        size_t *optvallen_);
ZLINK_EXPORT zlink_config_result_t zlink_set_sub_option (void *handle_,
                                        zlink_sub_option_t option_,
                                        const void *optval_,
                                        size_t optvallen_);
ZLINK_EXPORT zlink_config_result_t zlink_get_sub_option (void *handle_,
                                        zlink_sub_option_t option_,
                                        void *optval_,
                                        size_t *optvallen_);
ZLINK_EXPORT zlink_bind_result_t zlink_bind (void *s_, const char *addr_);
ZLINK_EXPORT zlink_connect_result_t zlink_connect (void *s_, const char *addr_);
ZLINK_EXPORT zlink_connect_result_t zlink_unbind (void *s_, const char *addr_);
ZLINK_EXPORT zlink_connect_result_t zlink_disconnect (void *s_, const char *addr_);
ZLINK_EXPORT zlink_config_result_t zlink_socket_attach_discovery (void *socket_,
                                                 void *discovery_);
ZLINK_EXPORT zlink_submit_result_t zlink_send (void *s_,
                                               zlink_msg_t *parts_,
                                               size_t part_count_,
                                               zlink_send_flags_t flags_);
ZLINK_EXPORT zlink_submit_result_t zlink_send_rid (
  void *s_,
  const zlink_routing_id_t *target_rid_,
  zlink_msg_t *parts_,
  size_t part_count_,
  zlink_send_flags_t flags_);
ZLINK_EXPORT zlink_submit_result_t zlink_dealer_request (
  void *dealer_,
  zlink_msg_t *parts_,
  size_t part_count_,
  zlink_reply_handler_fn handler_,
  void *userdata_,
  zlink_send_flags_t flags_,
  uint32_t timeout_ms_);
ZLINK_EXPORT zlink_submit_result_t zlink_router_request (
  void *router_,
  const zlink_routing_id_t *peer_rid_,
  zlink_msg_t *parts_,
  size_t part_count_,
  zlink_reply_handler_fn handler_,
  void *userdata_,
  zlink_send_flags_t flags_,
  uint32_t timeout_ms_);
ZLINK_EXPORT zlink_submit_result_t zlink_router_reply (
  void *router_,
  const zlink_routing_id_t *peer_rid_,
  uint64_t request_seq_,
  zlink_msg_t *parts_,
  size_t part_count_);
ZLINK_EXPORT zlink_handler_result_t zlink_router_handler (
  void *router_, zlink_router_handler_fn handler_, void *userdata_);
ZLINK_EXPORT zlink_recv_result_t zlink_router_recv (void *router_,
                                    const zlink_routing_id_t **source_node_rid_out_,
                                    const zlink_routing_id_t **source_spot_rid_out_,
                                    uint64_t *request_seq_out_,
                                    zlink_msg_t **parts_out_,
                                    size_t *part_count_out_,
                                    zlink_recv_flags_t flags_);
ZLINK_EXPORT zlink_submit_result_t zlink_router_request_spot (
  void *router_,
  const zlink_routing_id_t *dest_node_rid_,
  const zlink_routing_id_t *dest_spot_rid_,
  zlink_msg_t *parts_,
  size_t part_count_,
  zlink_reply_handler_fn handler_,
  void *userdata_,
  zlink_send_flags_t flags_,
  uint32_t timeout_ms_);
ZLINK_EXPORT zlink_submit_result_t zlink_router_reply_spot (
  void *router_,
  const zlink_routing_id_t *dest_node_rid_,
  const zlink_routing_id_t *dest_spot_rid_,
  uint64_t request_seq_,
  zlink_msg_t *parts_,
  size_t part_count_);
ZLINK_EXPORT zlink_submit_result_t zlink_router_send_spot (
  void *router_,
  const zlink_routing_id_t *dest_node_rid_,
  const zlink_routing_id_t *dest_spot_rid_,
  zlink_msg_t *parts_,
  size_t part_count_,
  zlink_send_flags_t flags_);
ZLINK_EXPORT zlink_recv_result_t zlink_recv (void *s_,
                              zlink_routing_id_t *source_rid_out_,
                              zlink_msg_t **parts_out_,
                              size_t *part_count_out_,
                              zlink_recv_flags_t flags_);
ZLINK_EXPORT zlink_submit_result_t zlink_publish (void *subject_,
                                                  const char *topic_id_,
                                                  zlink_msg_t *parts_,
                                                  size_t part_count_,
                                                  zlink_send_flags_t flags_);
ZLINK_EXPORT zlink_config_result_t zlink_set_subscription (void *handle_,
                                          const char *filter_);
ZLINK_EXPORT zlink_config_result_t zlink_unset_subscription (void *handle_,
                                            const char *filter_);
ZLINK_EXPORT zlink_config_result_t zlink_subscription_at (void *handle_,
                                         size_t index_,
                                         char *filter_out_,
                                         size_t *filter_len_inout_,
                                         int *is_pattern_out_);
ZLINK_EXPORT zlink_recv_result_t zlink_subscribe (void *subject_,
                                   zlink_routing_id_t *source_rid_out_,
                                   zlink_msg_t **parts_out_,
                                   size_t *part_count_out_,
                                   char *topic_id_out_,
                                   size_t *topic_id_len_out_,
                                   zlink_recv_flags_t flags_);
ZLINK_EXPORT zlink_recv_result_t zlink_subscription_event (
  void *subject_,
  zlink_routing_id_t *source_rid_out_,
  int *subscribed_out_,
  char *topic_id_out_,
  size_t *topic_id_len_out_,
  zlink_recv_flags_t flags_);
typedef struct {
    uint64_t event;
    uint64_t value;
    zlink_routing_id_t routing_id;
    char local_addr[256];
    char remote_addr[256];
} zlink_monitor_event_t;
typedef void (*zlink_monitor_handler_fn) (
  const zlink_monitor_event_t *event_, void *userdata_);
typedef zlink_monitor_event_t zlink_socket_monitor_event_t;
typedef zlink_monitor_handler_fn zlink_socket_monitor_handler_fn;
typedef struct zlink_socket_monitor_open_options_t
{
    zlink_socket_monitor_event_mask_t events;
} zlink_socket_monitor_open_options_t;
ZLINK_EXPORT void zlink_monitor_ignore_handler (
  const zlink_monitor_event_t *event_, void *userdata_);
typedef struct zlink_monitor_snapshot_t
{
    zlink_monitor_source_kind_t source_kind;
    zlink_monitor_state_mask_t state_flags;
    zlink_monitor_snapshot_detail_mask_t detail_flags;
    uint64_t snd_pending_msgs;
    uint64_t rcv_pending_msgs;
} zlink_monitor_snapshot_t;
ZLINK_EXPORT void *zlink_socket_monitor_open (
  void *s_, const zlink_socket_monitor_open_options_t *options_);
ZLINK_EXPORT zlink_handler_result_t zlink_socket_monitor_handler (
  void *monitor_,
  zlink_socket_monitor_handler_fn handler_,
  void *userdata_);
ZLINK_EXPORT zlink_recv_result_t zlink_socket_monitor_recv (
  void *monitor_,
  zlink_socket_monitor_event_t *out_,
  zlink_recv_flags_t flags_);
ZLINK_EXPORT zlink_config_result_t zlink_monitor_snapshot (void *monitor_,
                                         zlink_monitor_snapshot_t *out_);
ZLINK_EXPORT zlink_close_result_t zlink_monitor_close (void **monitor_p_);
ZLINK_EXPORT void zlink_multipart_close (zlink_msg_t *parts, size_t part_count);
ZLINK_EXPORT void *zlink_registry_new (void *ctx);
ZLINK_EXPORT zlink_bind_result_t zlink_registry_bind (void *registry,
                                      const char *pub_endpoint,
                                      const char *router_endpoint);
ZLINK_EXPORT zlink_config_result_t zlink_registry_set_id (void *registry, uint32_t registry_id);
ZLINK_EXPORT zlink_config_result_t zlink_registry_add_peer (void *registry,
                                      const char *peer_pub_endpoint);
ZLINK_EXPORT zlink_config_result_t zlink_registry_set_heartbeat (void *registry,
                                           uint32_t interval_ms,
                                           uint32_t timeout_ms);
ZLINK_EXPORT zlink_config_result_t zlink_registry_set_broadcast_interval (void *registry,
                                                    uint32_t interval_ms);
ZLINK_EXPORT zlink_close_result_t zlink_registry_destroy (void **registry_p);
ZLINK_EXPORT void *zlink_discovery_new (void *ctx,
                                        zlink_service_type_t service_type,
                                        const char *service_name);
ZLINK_EXPORT zlink_connect_result_t zlink_discovery_connect_registry (
  void *discovery, const char *registry_endpoint);
ZLINK_EXPORT zlink_config_result_t zlink_discovery_set_dealer_peer_mode (
  void *discovery_, zlink_discovery_dealer_peer_mode_t mode_);
ZLINK_EXPORT zlink_config_result_t zlink_discovery_resolve_spot (
  void *discovery_,
  const zlink_routing_id_t *spot_rid_,
  zlink_routing_id_t *owner_node_rid_out_);
ZLINK_EXPORT zlink_config_result_t zlink_discovery_set_value (void *discovery_, int64_t value_);
ZLINK_EXPORT zlink_config_result_t zlink_discovery_get_value (void *discovery_,
                                            int64_t *value_out_);
ZLINK_EXPORT zlink_config_result_t zlink_discovery_set_metadata (void *discovery_,
                                               const void *data_,
                                               size_t size_);
ZLINK_EXPORT zlink_config_result_t zlink_discovery_get_metadata (void *discovery_,
                                               zlink_msg_t *metadata_out_);
ZLINK_EXPORT zlink_close_result_t zlink_discovery_destroy (void **discovery_p);
typedef struct zlink_service_event_t
{
    zlink_service_kind_t service_kind;
    uint32_t event_type;
    int32_t status;
    int32_t error_code;
    uint32_t value;
    zlink_service_event_detail_mask_t detail_flags;
    char service_name[256];
    char endpoint[256];
    zlink_routing_id_t routing_id;
    char subject[256];
    uint32_t subject_kind;
} zlink_service_event_t;
typedef void (*zlink_service_monitor_handler_fn) (
  const zlink_service_event_t *event_, void *userdata_);
typedef zlink_service_event_t zlink_service_monitor_event_t;
typedef struct zlink_service_monitor_open_options_t
{
    zlink_service_monitor_event_mask_t events;
} zlink_service_monitor_open_options_t;
ZLINK_EXPORT void *zlink_service_monitor_open (
  void *target_,
  const zlink_service_monitor_open_options_t *options_);
ZLINK_EXPORT zlink_handler_result_t zlink_service_monitor_handler (
  void *monitor_,
  zlink_service_monitor_handler_fn handler_,
  void *userdata_);
ZLINK_EXPORT zlink_recv_result_t zlink_service_monitor_recv (
  void *monitor_,
  zlink_service_monitor_event_t *out_,
  zlink_recv_flags_t flags_);
typedef void (zlink_thread_fn) (void *);