bindings/rust/src/ffi.rs


    // -- Socket options ----------------------------------------------------
    pub fn zlink_set_option(
        handle: *mut c_void,
        option: zlink_option_t,
        optval: *const c_void,
        optvallen: usize,
    ) -> c_int;
    pub fn zlink_get_option(
        handle: *mut c_void,
        option: zlink_option_t,
        optval: *mut c_void,
        optvallen: *mut usize,
    ) -> c_int;
    pub fn zlink_set_routing_id(handle: *mut c_void, data: *const c_void, size: usize) -> c_int;
    pub fn zlink_get_routing_id(handle: *mut c_void, out: *mut zlink_routing_id_t) -> c_int;
    pub fn zlink_set_tls_server(
        handle: *mut c_void,
        cert: *const c_char,
        key: *const c_char,
        require_client_cert: c_int,
    ) -> c_int;
    pub fn zlink_set_tls_client(
        handle: *mut c_void,
        ca_cert: *const c_char,
        hostname: *const c_char,
        trust_system: c_int,
    ) -> c_int;
    pub fn zlink_set_router_option(
        handle: *mut c_void,
        option: zlink_router_option_t,
        optval: *const c_void,
        optvallen: usize,
    ) -> c_int;
    pub fn zlink_get_router_option(
        handle: *mut c_void,
        option: zlink_router_option_t,
        optval: *mut c_void,
        optvallen: *mut usize,
    ) -> c_int;
    pub fn zlink_set_dealer_option(
        handle: *mut c_void,
        option: zlink_dealer_option_t,
        optval: *const c_void,
        optvallen: usize,
    ) -> c_int;
    pub fn zlink_set_pub_option(
        handle: *mut c_void,
        option: zlink_pub_option_t,
        optval: *const c_void,
        optvallen: usize,
    ) -> c_int;
    pub fn zlink_get_pub_option(
        handle: *mut c_void,
        option: zlink_pub_option_t,
        optval: *mut c_void,
        optvallen: *mut usize,
    ) -> c_int;
    pub fn zlink_set_sub_option(
        handle: *mut c_void,
        option: zlink_sub_option_t,
        optval: *const c_void,
        optvallen: usize,
    ) -> c_int;
    pub fn zlink_get_sub_option(
        handle: *mut c_void,
        option: zlink_sub_option_t,
        optval: *mut c_void,
        optvallen: *mut usize,
    ) -> c_int;
    pub fn zlink_set_stream_option(
        handle: *mut c_void,
        option: zlink_stream_option_t,
        optval: *const c_void,
        optvallen: usize,
    ) -> c_int;
    pub fn zlink_get_stream_option(
        handle: *mut c_void,
        option: zlink_stream_option_t,
        optval: *mut c_void,
        optvallen: *mut usize,
    ) -> c_int;

    // -- Bind / connect ----------------------------------------------------
    pub fn zlink_bind(socket: *mut c_void, addr: *const c_char) -> c_int;
    pub fn zlink_connect(socket: *mut c_void, addr: *const c_char) -> c_int;
    pub fn zlink_unbind(socket: *mut c_void, addr: *const c_char) -> c_int;
    pub fn zlink_disconnect(socket: *mut c_void, addr: *const c_char) -> c_int;
    pub fn zlink_socket_attach_discovery(socket: *mut c_void, discovery: *mut c_void) -> c_int;

    // -- Send / recv -------------------------------------------------------
    pub fn zlink_send(
        socket: *mut c_void,
        parts: *mut zlink_msg_t,
        part_count: usize,
        flags: zlink_send_flags_t,
    ) -> c_int;
    pub fn zlink_send_rid(
        socket: *mut c_void,
        target_rid: *const zlink_routing_id_t,
        parts: *mut zlink_msg_t,
        part_count: usize,
        flags: zlink_send_flags_t,
    ) -> c_int;
    pub fn zlink_dealer_request(
        dealer: *mut c_void,
        parts: *mut zlink_msg_t,
        part_count: usize,
        handler: zlink_reply_handler_fn,
        userdata: *mut c_void,
        flags: zlink_send_flags_t,
        timeout_ms: u32,
    ) -> c_int;
    pub fn zlink_router_request(
        router: *mut c_void,
        peer_rid: *const zlink_routing_id_t,
        parts: *mut zlink_msg_t,
        part_count: usize,
        handler: zlink_reply_handler_fn,
        userdata: *mut c_void,
        flags: zlink_send_flags_t,
        timeout_ms: u32,
    ) -> c_int;
    pub fn zlink_router_reply(
        router: *mut c_void,
        peer_rid: *const zlink_routing_id_t,
        request_seq: u64,
        parts: *mut zlink_msg_t,
        part_count: usize,
    ) -> c_int;
    pub fn zlink_router_handler(
        router: *mut c_void,
        handler: zlink_router_handler_fn,
        userdata: *mut c_void,
    ) -> c_int;
    pub fn zlink_router_recv(
        router: *mut c_void,
        source_node_rid_out: *mut *const zlink_routing_id_t,
        source_spot_rid_out: *mut *const zlink_routing_id_t,
        request_seq_out: *mut u64,
        parts_out: *mut *mut zlink_msg_t,
        part_count_out: *mut usize,
        flags: zlink_send_flags_t,
    ) -> c_int;
    pub fn zlink_router_request_spot(
        router: *mut c_void,
        dest_node_rid: *const zlink_routing_id_t,
        dest_spot_rid: *const zlink_routing_id_t,
        parts: *mut zlink_msg_t,
        part_count: usize,
        handler: zlink_reply_handler_fn,
        userdata: *mut c_void,
        flags: zlink_send_flags_t,
        timeout_ms: u32,
    ) -> c_int;
    pub fn zlink_router_reply_spot(
        router: *mut c_void,
        dest_node_rid: *const zlink_routing_id_t,
        dest_spot_rid: *const zlink_routing_id_t,
        request_seq: u64,
        parts: *mut zlink_msg_t,
        part_count: usize,
    ) -> c_int;
    pub fn zlink_router_send_spot(
        router: *mut c_void,
        dest_node_rid: *const zlink_routing_id_t,
        dest_spot_rid: *const zlink_routing_id_t,
        parts: *mut zlink_msg_t,
        part_count: usize,
        flags: zlink_send_flags_t,
    ) -> c_int;
    pub fn zlink_recv(
        socket: *mut c_void,
        source_rid_out: *mut zlink_routing_id_t,
        parts_out: *mut *mut zlink_msg_t,
        part_count_out: *mut usize,
        flags: zlink_send_flags_t,
    ) -> c_int;

    // -- Publish / subscribe -----------------------------------------------
    pub fn zlink_publish(
        subject: *mut c_void,
        topic_id: *const c_char,
        parts: *mut zlink_msg_t,
        part_count: usize,
        flags: zlink_send_flags_t,
    ) -> c_int;
    pub fn zlink_set_subscription(handle: *mut c_void, filter: *const c_char) -> c_int;
    pub fn zlink_unset_subscription(handle: *mut c_void, filter: *const c_char) -> c_int;
    pub fn zlink_subscription_at(
        handle: *mut c_void,
        index: usize,
        filter_out: *mut c_char,
        filter_len_inout: *mut usize,
        is_pattern_out: *mut c_int,
    ) -> c_int;
    pub fn zlink_subscribe(
        subject: *mut c_void,
        source_rid_out: *mut zlink_routing_id_t,
        parts_out: *mut *mut zlink_msg_t,
        part_count_out: *mut usize,
        topic_id_out: *mut c_char,
        topic_id_len_out: *mut usize,
        flags: zlink_send_flags_t,
    ) -> c_int;
    pub fn zlink_subscription_event(
        subject: *mut c_void,
        source_rid_out: *mut zlink_routing_id_t,
        subscribed_out: *mut c_int,
        topic_id_out: *mut c_char,
        topic_id_len_out: *mut usize,
        flags: zlink_send_flags_t,
    ) -> c_int;

    // -- Multipart close ---------------------------------------------------
    pub fn zlink_multipart_close(parts: *mut zlink_msg_t, part_count: usize);

    // -- Socket monitor ----------------------------------------------------
    pub fn zlink_socket_monitor_open(
        socket: *mut c_void,
        options: *const zlink_socket_monitor_open_options_t,
    ) -> *mut c_void;
    pub fn zlink_socket_monitor_handler(
        monitor: *mut c_void,
        handler: zlink_socket_monitor_handler_fn,
        userdata: *mut c_void,
    ) -> c_int;
    pub fn zlink_socket_monitor_recv(
        monitor: *mut c_void,
        out: *mut zlink_socket_monitor_event_t,
        flags: zlink_send_flags_t,
    ) -> c_int;
    pub fn zlink_monitor_snapshot(
        monitor: *mut c_void,
        out: *mut zlink_monitor_snapshot_t,
    ) -> c_int;
    pub fn zlink_monitor_close(monitor_p: *mut *mut c_void) -> c_int;
    pub fn zlink_monitor_ignore_handler(event: *const zlink_monitor_event_t, userdata: *mut c_void);

    // -- Service monitor ---------------------------------------------------
    pub fn zlink_service_monitor_open(
        target: *mut c_void,
        options: *const zlink_service_monitor_open_options_t,
    ) -> *mut c_void;
    pub fn zlink_service_monitor_handler(
        monitor: *mut c_void,
        handler: zlink_service_monitor_handler_fn,
        userdata: *mut c_void,
    ) -> c_int;
    pub fn zlink_service_monitor_recv(
        monitor: *mut c_void,
        out: *mut zlink_service_monitor_event_t,
        flags: zlink_send_flags_t,
    ) -> c_int;

    // -- Registry ----------------------------------------------------------
    pub fn zlink_registry_new(ctx: *mut c_void) -> *mut c_void;
    pub fn zlink_registry_bind(
        registry: *mut c_void,
        pub_endpoint: *const c_char,
        router_endpoint: *const c_char,
    ) -> c_int;
    pub fn zlink_registry_set_id(registry: *mut c_void, id: u32) -> c_int;
    pub fn zlink_registry_add_peer(
        registry: *mut c_void,
        peer_pub_endpoint: *const c_char,
    ) -> c_int;
    pub fn zlink_registry_set_heartbeat(
        registry: *mut c_void,
        interval_ms: u32,
        timeout_ms: u32,
    ) -> c_int;
    pub fn zlink_registry_set_broadcast_interval(registry: *mut c_void, interval_ms: u32) -> c_int;
    pub fn zlink_registry_destroy(registry_p: *mut *mut c_void) -> c_int;

    // -- Discovery ---------------------------------------------------------
    pub fn zlink_discovery_new(
        ctx: *mut c_void,
        service_type: zlink_service_type_t,
        service_name: *const c_char,
    ) -> *mut c_void;
    pub fn zlink_discovery_connect_registry(
        discovery: *mut c_void,
        registry_endpoint: *const c_char,
    ) -> c_int;
    pub fn zlink_discovery_set_value(discovery: *mut c_void, value: i64) -> c_int;
    pub fn zlink_discovery_get_value(discovery: *mut c_void, value_out: *mut i64) -> c_int;
    pub fn zlink_discovery_set_metadata(
        discovery: *mut c_void,
        data: *const c_void,
        size: usize,
    ) -> c_int;
    pub fn zlink_discovery_get_metadata(
        discovery: *mut c_void,
        metadata_out: *mut zlink_msg_t,
    ) -> c_int;
    pub fn zlink_discovery_resolve_spot(
        discovery: *mut c_void,
        spot_rid: *const zlink_routing_id_t,
        owner_node_rid_out: *mut zlink_routing_id_t,
    ) -> c_int;
    pub fn zlink_discovery_set_dealer_peer_mode(discovery: *mut c_void, mode: u32) -> c_int;
    pub fn zlink_discovery_destroy(discovery_p: *mut *mut c_void) -> c_int;
